<resources>
    <string name="app_name">Simple Remote</string>
    <string name="action_settings">Settings</string>
    <string name="action_power_controls">Power</string>
    <string name="action_mouse_controls">Mouse</string>
    <string name="action_show_keyboard">Show keyboard</string>
    <string name="action_extensions">Extensions</string>
    <string name="title_activity_devices">Devices</string>
    <string name="action_refresh">Refresh</string>
    <string name="cd_device_icon">Device icon</string>
    <string name="pl_first_line_text">First line text</string>
    <string name="pl_second_line_text">Second line text</string>
    <string name="left_mouse_button">L</string>
    <string name="right_mouse_button">R</string>
    <string name="action_media_controls">Media</string>
    <string name="power_control_power_off">Power off</string>
    <string name="power_control_reboot">Reboot</string>
    <string name="power_control_lock">Lock</string>
    <string name="power_control_power_off_description">Note: you can\'t control device after.</string>
    <string name="power_control_reboot_description">Note: probably, you can\'t control device after.</string>
    <string name="power_control_lock_description">Note: you can still control device.</string>
</resources>
