<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.home.HomeActivity">

    <item
        android:id="@+id/menu_item_mouse"
        android:icon="@drawable/ic_mouse_white"
        android:title="@string/action_mouse_controls"/>

    <item
        android:id="@+id/menu_item_media"
        android:icon="@drawable/ic_media_white"
        android:title="@string/action_media_controls"/>

    <item
        android:id="@+id/menu_item_power"
        android:icon="@drawable/ic_power_white"
        android:title="@string/action_power_controls"/>

    <item
        android:id="@+id/menu_item_extensions"
        android:icon="@drawable/ic_extension_white"
        android:title="@string/action_extensions"/>

</menu>