<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_two_line_height"
                android:background="?android:attr/selectableItemBackground"
                android:paddingLeft="@dimen/list_item_content_padding_left"
                android:paddingRight="@dimen/list_item_content_padding_right">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/cd_device_icon"
        android:src="@drawable/ic_power_white"
        android:tint="@color/icons_active_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/list_item_text_margin_left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pl_first_line_text"
            android:textColor="@color/primary_dark_text"
            android:textSize="@dimen/primary_text_size"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pl_second_line_text"
            android:textColor="@color/secondary_dark_text"
            android:textSize="@dimen/secondary_text_size"/>

    </LinearLayout>

</RelativeLayout>